--- a/residental-services-lakeland-fl.html
+++ b/residental-services-lakeland-fl.html
@@ -187,7 +187,7 @@
 
 
                 <h1 class="text-center">
-                    <span class="text-primary">Residental services</span>
+                    Residental  <span class="text-primary">Lawn care</span> services
                     in Lakeland, FL
                 </h1>
 
