--- a/prep-bed-areas-services-lakeland-fl.html
+++ b/prep-bed-areas-services-lakeland-fl.html
@@ -257,6 +257,201 @@
             </div>
         </div>
     </section>
+     <!-- Services Start -->
+     <section class="services light-section mb-0" data-aos="fade-up">
+        <div class="container">
+            <h2 class="header text-center">Our Services</h2>
+            <div class="service-grid">
+                <div class="service">
+                    <div class="info-div">
+                        <div class="icon-div">
+                            <img src="/img/service-1-icon.png" alt="Lawn Mowing">
+                        </div>
+                        <img class="bg-icon" src="/img/service-1-icon.png" alt="Lawn Mowing">
+                        <a href="/mowing-services-lakeland.html" title="Lawn Mowing" class="service-name">
+                            Lawn Mowing <i class="fa-solid fa-chevron-right ms-1 fs-18"></i>
+                        </a>
+                    </div>
+                    <div class="img-div">
+                        <div class="phone-icon">
+                            <a title="Call now for free estimate" href="tel:+18138093317"><i
+                                    class="fa-solid fa-phone-volume"></i></a>
+                        </div>
+                        <img style="transform: scaleX(-1);" src="/img/lawn-service-1.PNG" alt="Lawn Mowing">
+                    </div>
+                </div>
+
+                <div class="service">
+                    <div class="info-div">
+                        <div class="icon-div">
+                            <img src="/img/service-2-icon.png" alt="Tree Trimming">
+                        </div>
+                        <img class="bg-icon" src="/img/service-2-icon.png" alt="Tree Trimming">
+                        <a href="/tree-trimming.html" title="Tree Trimming" class="service-name">
+                            Tree Trimming <i class="fa-solid fa-chevron-right ms-1 fs-18"></i>
+                        </a>
+                    </div>
+                    <div class="img-div">
+                        <div class="phone-icon">
+                            <a title="Call now for free estimate" href="tel:+18138093317"><i
+                                    class="fa-solid fa-phone-volume"></i></a>
+                        </div>
+                        <img src="/img/tree-trimming.PNG" alt="Tree Trimming">
+                    </div>
+                </div>
+
+                <div class="service">
+                    <div class="info-div">
+                        <div class="icon-div">
+                            <img src="/img/mulching-icon.webp" alt="Mulching">
+                        </div>
+                        <img class="bg-icon" src="/img/mulching-icon.webp" alt="Mulching">
+                        <a href="/mulching-services-lakeland.html" title="Mulching Services" class="service-name">
+                            Mulching service <i class="fa-solid fa-chevron-right ms-1 fs-18"></i>
+                        </a>
+                    </div>
+                    <div class="img-div">
+                        <div class="phone-icon">
+                            <a title="Call now for free estimate" href="tel:+18138093317"><i
+                                    class="fa-solid fa-phone-volume"></i></a>
+                        </div>
+                        <img src="/img/mulching-sserv.PNG" alt="Mulching">
+                    </div>
+                </div>
+
+
+                <div class="service">
+                    <div class="info-div">
+                        <div class="icon-div">
+                            <img src="/img/service-4-icon.png" alt="Edge & Blow Hard Surface">
+                        </div>
+                        <img class="bg-icon" src="/img/service-4-icon.png" alt="Edge & Blow Hard Surface">
+                        <a href="/edge-blowoff-hard-surfaces.html" title="Edge & Blow Hard Surface"
+                            class="service-name">
+                            Edge & Blow Services <i class="fa-solid fa-chevron-right ms-1 fs-18"></i>
+                        </a>
+                    </div>
+                    <div class="img-div">
+                        <div class="phone-icon">
+                            <a title="Call now for free estimate" href="tel:+18138093317"><i
+                                    class="fa-solid fa-phone-volume"></i></a>
+                        </div>
+                        <img src="/img/edge-and-blow-service.PNG" alt="Edge & Blow Hard Surface">
+                    </div>
+                </div>
+
+                <div class="service">
+                    <div class="info-div">
+                        <div class="icon-div">
+                            <img src="/img/service-5-icon.png" alt="Side walks">
+                        </div>
+                        <img class="bg-icon" src="/img/service-5-icon.png" alt="Side walks">
+                        <a href="/sidewalk-installation.html" title="Side walks" class="service-name">
+                            Sidewalk installation <i class="fa-solid fa-chevron-right ms-1 fs-18"></i>
+                        </a>
+                    </div>
+                    <div class="img-div">
+                        <div class="phone-icon">
+                            <a title="Call now for free estimate" href="tel:+18138093317"><i
+                                    class="fa-solid fa-phone-volume"></i></a>
+                        </div>
+                        <img src="/img/side-walk-service.PNG" alt="Side walks">
+                    </div>
+                </div>
+                <div class="service">
+                    <div class="info-div">
+                        <div class="icon-div">
+                            <img src="/img/service-3-icon.png" alt="Prep bed areas">
+                        </div>
+                        <img class="bg-icon" src="/img/service-3-icon.png" alt="Prep bed areas">
+                        <a href="/prep-bed-areas-services-lakeland-fl.html" title="Prep bed areas" class="service-name">
+                            Prep bed areas service <i class="fa-solid fa-chevron-right ms-1 fs-18"></i>
+                        </a>
+                    </div>
+                    <div class="img-div">
+                        <div class="phone-icon">
+                            <a title="Call now for free estimate" href="tel:+18138093317"><i
+                                    class="fa-solid fa-phone-volume"></i></a>
+                        </div>
+                        <img src="/img/prep-bed-area.jpg" alt="Prep bed areas">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- CTA Section -->
+    <section class="cta primary-overlay">
+        <img class="bg-img" style="object-position: center;" src="/img/index-main.jpg" alt="LFTGU Lawn care">
+        <div class="container" data-aos="fade-up">
+            <!-- CTA Text -->
+            <h4 class="text-center lh-100 text-capitalize">Your Perfect Lawn Is A Call Away. <br>
+                Call us at +1 (813) 809-3317
+            </h4>
+            <!-- CTA Button -->
+            <div class="d-flex justify-content-center">
+                <a title="Call LFTGU Lawn care for free estimate" class="btn btn-primary rounded-1 px-5 fs-18 mt-5"
+                    href="tel:+18138093317">Call Now</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- About Us -->
+    <section class="two-col-info">
+        <div class="container">
+            <div class="flex">
+                <div class="img-div">
+                    <!-- <img class="main-img" style="transform: scaleX(-1);" src="/img/building-hvac.jpg" alt="Lawn"> -->
+                    <video muted loop autoplay playsinline>
+                        <source src="/img/lawn-video.mp4" type="video/mp4">
+                    </video>
+                </div>
+                <div class="info-div">
+                    <p class="sub-header">
+                        Lawn care services
+                    </p>
+                    <h3 class="title">
+                        <span class="text-secondary">Expert </span> Lawn Mowing and Maintenance
+                    </h3>
+                    <p class="mb-3">
+                        Discover the difference professional lawn care services can make for your home. At LFTGU Lawn
+                        Care, we offer expert lawn mowing and maintenance services to keep your yard looking its best.
+                        Our team is dedicated to providing top-quality service and exceptional results, so you can enjoy
+                        a beautiful, healthy lawn all year long. Whether you need regular mowing, seasonal maintenance,
+                        or expert advice, we have you covered. Trust LFTGU Lawn Care to take care of all your lawn care
+                        needs and help you create the perfect outdoor space for your home.
+
+                    </p>
+                    <hr>
+                    <ul class="mb-4">
+                        <li>
+                            Precision Mowing
+                        </li>
+                        <li>
+                            Seasonal Maintenance
+                        </li>
+                        <li>
+                            Edging and Trimming
+                        </li>
+                        <li>
+                            Expert Advice
+                        </li>
+                    </ul>
+
+                    <div class="d-flex flex-wrap gap-2">
+                        <a title="lawn mowing" class="btn btn-secondary fs-19 px-4" href="/contact.html">
+                            Get a Free Estimate
+                        </a>
+                        <a title="lawn Service contact" class="btn btn-outline-secondary border-2 fs-19 px-5"
+                            href="tel:+18138093317">
+                            Call Now
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <!-- Footer -->
     <footer class="position-relative pt-3">
