--- a/commercial-services-lakeland-fl.html
+++ b/commercial-services-lakeland-fl.html
@@ -187,7 +187,7 @@
 
 
                 <h1 class="text-center">
-                    Commercial  <span class="text-primary"> Lawn care</span> services
+                    Commercial  <span class="text-primary"> Lawn</span> services
                     in Lakeland, FL
                 </h1>
 
