--- a/edge-blowoff-hard-surfaces.html
+++ b/edge-blowoff-hard-surfaces.html
@@ -281,7 +281,7 @@
                         <a title="Call now for free estimate" href="tel:+18138093317"><i
                                 class="fa-solid fa-phone-volume"></i></a>
                     </div>
-                    <img style="transform: scaleX(-1);" src="/img/lawn-service-1.PNG" alt="Lawn Mowing">
+                    <img style="transform: scaleX(-1);" src="/img/lawn-service-1.jpg" alt="Lawn Mowing">
                 </div>
             </div>
 
@@ -300,7 +300,7 @@
                         <a title="Call now for free estimate" href="tel:+18138093317"><i
                                 class="fa-solid fa-phone-volume"></i></a>
                     </div>
-                    <img src="/img/tree-trimming.PNG" alt="Tree Trimming">
+                    <img src="/img/tree-trimming.jpg" alt="Tree Trimming">
                 </div>
             </div>
 
@@ -319,7 +319,7 @@
                         <a title="Call now for free estimate" href="tel:+18138093317"><i
                                 class="fa-solid fa-phone-volume"></i></a>
                     </div>
-                    <img src="/img/mulching-sserv.PNG" alt="Mulching">
+                    <img src="/img/mulching-sserv.jpg" alt="Mulching">
                 </div>
             </div>
 
@@ -359,7 +359,7 @@
                         <a title="Call now for free estimate" href="tel:+18138093317"><i
                                 class="fa-solid fa-phone-volume"></i></a>
                     </div>
-                    <img src="/img/side-walk-service.PNG" alt="Side walks">
+                    <img src="/img/side-walk-service.jpg" alt="Side walks">
                 </div>
             </div>
             <div class="service">
