--- a/commercial-services-lakeland-fl.html
+++ b/commercial-services-lakeland-fl.html
@@ -288,7 +288,7 @@
                             <a title="Call now for free estimate" href="tel:+18138093317"><i
                                     class="fa-solid fa-phone-volume"></i></a>
                         </div>
-                        <img style="transform: scaleX(-1);" src="/img/lawn-service-1.PNG" alt="Lawn Mowing">
+                        <img style="transform: scaleX(-1);" src="/img/lawn-service-1.jpg" alt="Lawn Mowing">
                     </div>
                 </div>
 
@@ -307,7 +307,7 @@
                             <a title="Call now for free estimate" href="tel:+18138093317"><i
                                     class="fa-solid fa-phone-volume"></i></a>
                         </div>
-                        <img src="/img/tree-trimming.PNG" alt="Tree Trimming">
+                        <img src="/img/tree-trimming.jpg" alt="Tree Trimming">
                     </div>
                 </div>
 
@@ -326,7 +326,7 @@
                             <a title="Call now for free estimate" href="tel:+18138093317"><i
                                     class="fa-solid fa-phone-volume"></i></a>
                         </div>
-                        <img src="/img/mulching-sserv.PNG" alt="Mulching">
+                        <img src="/img/mulching-sserv.jpg" alt="Mulching">
                     </div>
                 </div>
 
@@ -366,7 +366,7 @@
                             <a title="Call now for free estimate" href="tel:+18138093317"><i
                                     class="fa-solid fa-phone-volume"></i></a>
                         </div>
-                        <img src="/img/side-walk-service.PNG" alt="Side walks">
+                        <img src="/img/side-walk-service.jpg" alt="Side walks">
                     </div>
                 </div>
                 <div class="service">
