--- a/tree-trimming.html
+++ b/tree-trimming.html
@@ -211,7 +211,7 @@
 
 
         <!-- Background Image behind hero sections -->
-        <img class="hero-img" src="/img/tree-trimming.PNG" alt="Our Lawn Services">
+        <img class="hero-img" src="/img/tree-trimming.jpg" alt="Our Lawn Services">
     </section>
 
 
@@ -247,7 +247,7 @@
 
                 <!-- Img Side -->
                 <div class="img-div top-right">
-                    <img style="object-position: top;" src="/img/tree-trimming.PNG" alt="Our Lawn Services">
+                    <img style="object-position: top;" src="/img/tree-trimming.jpg" alt="Our Lawn Services">
 
                     <!-- <div class="img-data data-bottom-left">
                         <p class=" highlight">Keith Dorr</p>
@@ -267,7 +267,7 @@
                     <div class="icon-div">
                         <img src="/img/service-1-icon.png" alt="Lawn Mowing">
                     </div>
-                    <img class="bg-icon" src="/img/service-1-icon.png" alt="Lawn Mowing">
+                    <img class="bg-icon" src="/img/lawn-service-1.jpg" alt="Lawn Mowing">
                     <a href="/mowing-services-lakeland.html" title="Lawn Mowing" class="service-name">
                         Lawn Mowing <i class="fa-solid fa-chevron-right ms-1 fs-18"></i>
                     </a>
@@ -277,7 +277,7 @@
                         <a title="Call now for free estimate" href="tel:+18138093317"><i
                                 class="fa-solid fa-phone-volume"></i></a>
                     </div>
-                    <img style="transform: scaleX(-1);" src="/img/lawn-service-1.PNG" alt="Lawn Mowing">
+                    <img style="transform: scaleX(-1);" src="/img/lawn-service-1.jpg" alt="Lawn Mowing">
                 </div>
             </div>
 
@@ -296,7 +296,7 @@
                         <a title="Call now for free estimate" href="tel:+18138093317"><i
                                 class="fa-solid fa-phone-volume"></i></a>
                     </div>
-                    <img src="/img/tree-trimming.PNG" alt="Tree Trimming">
+                    <img src="/img/tree-trimming.jpg" alt="Tree Trimming">
                 </div>
             </div>
 
@@ -315,7 +315,7 @@
                         <a title="Call now for free estimate" href="tel:+18138093317"><i
                                 class="fa-solid fa-phone-volume"></i></a>
                     </div>
-                    <img src="/img/mulching-sserv.PNG" alt="Mulching">
+                    <img src="/img/mulching-sserv.jpg" alt="Mulching">
                 </div>
             </div>
 
@@ -355,7 +355,7 @@
                         <a title="Call now for free estimate" href="tel:+18138093317"><i
                                 class="fa-solid fa-phone-volume"></i></a>
                     </div>
-                    <img src="/img/side-walk-service.PNG" alt="Side walks">
+                    <img src="/img/side-walk-service.jpg" alt="Side walks">
                 </div>
             </div>
             <div class="service">
