--- a/residental-services-lakeland-fl.html
+++ b/residental-services-lakeland-fl.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1.0, user-scalable=no">
     <title>
-        Residental Services in lakeland, fl | Trusted Lawn Care Services in Lakeland, FL
+        Residential Services in lakeland, fl | Trusted Lawn Care Services in Lakeland, FL
     </title>
 
     <meta name="description" content="">
@@ -149,8 +149,8 @@
                             <!-- Fourth Navigation -->
 
                             <li class="nav-item">
-                                <a class="nav-link" title="Residental services"
-                                    href="/residental-services-lakeland-fl.html">Residental services</a>
+                                <a class="nav-link" title="Residential services"
+                                    href="/Residential-services-lakeland-fl.html">Residential services</a>
                             </li>
 
 
@@ -187,7 +187,7 @@
 
 
                 <h1 class="text-center">
-                    Residental  <span class="text-primary">Lawn</span> services
+                    Residential  <span class="text-primary">Lawn</span> services
                     in Lakeland, FL
                 </h1>
 
