--- a/edge-blowoff-hard-surfaces.html
+++ b/edge-blowoff-hard-surfaces.html
@@ -150,8 +150,8 @@
                             <!-- Fourth Navigation -->
 
                             <li class="nav-item">
-                                <a class="nav-link" title="Residental services"
-                                    href="/residental-services-lakeland-fl.html">Residental services</a>
+                                <a class="nav-link" title="Residential services"
+                                    href="/Residential-services-lakeland-fl.html">Residential services</a>
                             </li>
 
 
